--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "vercel-build": "echo 'Building backend for Vercel deployment'"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "axios": "^1.6.2",
